# spice

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  _clang-format  bench.sh  plots.m  viz.m
results/: bench.sh  bsim.json  dgx.json  genn.json  neurongpu.json  plots.m  results.json  spice.json  spice_eager.json  spice_lazy.json  spice_naive.json  viz.m
samples/: _main.cpp  main.cpp  main2.cpp
spice/: snn.cpp  snn.h  snn_info.h
spice/cpu/: backend.h  snn.h  snn.h.cpp
spice/cuda/: algorithm.cu  algorithm.h  backend.cuh  multi_snn.cpp  multi_snn.h  snn.d.cpp  snn.h
spice/cuda/util/: dbuffer.h  defs.h  dev_ptr.h  dev_var.h  device.cpp  device.h  dvar.h  error.h  event.cpp  event.h  mem_pool.cpp  mem_pool.h  memory.cpp  memory.h  random.cuh  stream.cpp  stream.h  utility.cuh  warp.cuh
spice/models/: brunel.h  brunel_with_plasticity.h  model.h  synth.h  vogels_abbott.h
spice/util/: adj_list.cpp  adj_list.h  assert.cpp  assert.h  circular_buffer.h  host_defines.h  if_constexpr.h  layout.cpp  layout.h  meta.h  neuron_group.cpp  neuron_group.h  numeric.h  random.cpp  random.h  span.hpp  span2d.h  stdint.h  type_traits.h
spice_bench/: exp_range.h  experiments.cpp  main.cpp  paper_plots.cpp
spice_test/: main.cpp  model.h  snn.cpp
spice_test/cuda/: algorithm.d.cpp  snn.d.cpp
spice_test/cuda/util/: dbuffer.cpp  dev_ptr.cpp  device.cpp  device_variable.cpp  dummy.cu  dvar.cpp  error.cpp  event.cpp  mem_pool.cpp  memory.cpp  memory.cu  stream.cpp
spice_test/util/: adj_list.cpp  circular_buffer.cpp  layout.cpp  meta.cpp  neuron_group.cpp  numeric.cpp  random.cpp  type_traits.cpp
